ci: add helm to datasources for external-secrets group

--- a/.renovate/groups.json5
+++ b/.renovate/groups.json5
@@ -28,7 +28,7 @@
         commitMessageTopic: "{{{groupName}}} group",
       },
       groupName: "External Secrets Operator",
-      matchDatasources: ["docker"],
+      matchDatasources: ["docker", "helm"],
       matchPackageNames: ["/external-secrets/"],
     },
     {
