--- a/kubernetes/apps/base/kube-system/reloader/app/kustomization.yaml
+++ b/kubernetes/apps/base/kube-system/reloader/app/kustomization.yaml
@@ -2,10 +2,5 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-components:
-  - ../../../components/common
-namespace: kube-system
 resources:
-  - cilium/ks.yaml
-  - metrics-server/ks.yaml
-  - reloader/ks.yaml
+  - helmrelease.yaml
