--- a/kubernetes/apps/base/observability/grafana/operator/helmrelease.yaml
+++ b/kubernetes/apps/base/observability/grafana/operator/helmrelease.yaml
@@ -3,7 +3,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: OCIRepository
 metadata:
-  name: grafana
+  name: grafana-operator
 spec:
   interval: 5m
   layerSelector:
