--- a/kubernetes/apps/base/observability/grafana/instance/grafanadatasource.yaml
+++ b/kubernetes/apps/base/observability/grafana/instance/grafanadatasource.yaml
@@ -1,6 +1,6 @@
 ---
 # yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/grafana.integreatly.org/grafanadatasource_v1beta1.json
-apiVersion: v1beta1
+apiVersion: grafana.integreatly.org/v1beta1
 kind: GrafanaDatasource
 metadata:
   name: alertmanager
