--- a/kubernetes/apps/base/security/cert-manager/app/kustomization.yaml
+++ b/kubernetes/apps/base/security/cert-manager/app/kustomization.yaml
@@ -10,6 +10,7 @@ configurations:
   - kustomizeconfig.yaml
 resources:
   - externalsecret.yaml
+  - grafanadashboard.yaml
   - helmrelease.yaml
   - letsencrypt.yaml
   - selfsigned.yaml
