--- a/kubernetes/apps/base/observability/grafana/instance/kustomization.yaml
+++ b/kubernetes/apps/base/observability/grafana/instance/kustomization.yaml
@@ -2,11 +2,8 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-configMapGenerator:
-  - name: grafana-values
-    files:
-      - values.yaml=./values.yaml
-configurations:
-  - kustomizeconfig.yaml
 resources:
-  - helmrelease.yaml
+  - grafana.yaml
+  - grafanadashboard.yaml
+  - grafanadatasource.yaml
+  - httproute.yaml
