--- a/kubernetes/apps/oci/actions-runner-system/kustomization.yaml
+++ b/kubernetes/apps/oci/actions-runner-system/kustomization.yaml
@@ -4,7 +4,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 components:
   - ../../../components/common
-namespace: flux-system
+namespace: actions-runner-system
 resources:
   - gha-runner-scale-set/ks.yaml
   - gha-runner-scale-set-controller/ks.yaml
