--- a/kubernetes/apps/oci/actions-runner-system/gha-runner-scale-set-controller/ks.yaml
+++ b/kubernetes/apps/oci/actions-runner-system/gha-runner-scale-set-controller/ks.yaml
@@ -16,6 +16,6 @@ spec:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
-  targetNamespace: database
+  targetNamespace: actions-runner-system
   timeout: 5m
   wait: false
