--- a/kubernetes/apps/oci/actions-runner-system/gha-runner-scale-set-life/ks.yaml
+++ b/kubernetes/apps/oci/actions-runner-system/gha-runner-scale-set-life/ks.yaml
@@ -3,7 +3,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app gha-runner-scale-set
+  name: &app gha-runner-scale-set-life
 spec:
   commonMetadata:
     labels:
@@ -12,7 +12,7 @@ spec:
   path: ./kubernetes/apps/base/actions-runner-system/gha-runner-scale-set/app
   postBuild:
     substitute:
-      REPO: gitops
+      REPO: life
   prune: true
   retryInterval: 2m
   sourceRef:
