--- a/kubernetes/apps/oci/actions-runner-system/kustomization.yaml
+++ b/kubernetes/apps/oci/actions-runner-system/kustomization.yaml
@@ -8,3 +8,4 @@ namespace: actions-runner-system
 resources:
   - gha-runner-scale-set/ks.yaml
   - gha-runner-scale-set-controller/ks.yaml
+  - gha-runner-scale-set-life/ks.yaml
