chore: flattened OCI cluster folder structure

--- a/kubernetes/apps/oci/database/kustomization.yaml
+++ b/kubernetes/apps/oci/database/kustomization.yaml
@@ -6,5 +6,5 @@ components:
   - ../../../components/common
 namespace: database
 resources:
-  - cloudnative-pg/ks.yaml
-  - dragonfly-operator/ks.yaml
+  - cloudnative-pg.yaml
+  - dragonfly-operator.yaml
