--- a/kubernetes/apps/oci/kube-system/kustomization.yaml
+++ b/kubernetes/apps/oci/kube-system/kustomization.yaml
@@ -6,6 +6,6 @@ components:
   - ../../../components/common
 namespace: kube-system
 resources:
-  - cilium/ks.yaml
-  - metrics-server/ks.yaml
-  - reloader/ks.yaml
+  - cilium.yaml
+  - metrics-server.yaml
+  - reloader.yaml
