--- a/kubernetes/apps/oci/actions-runner-system/kustomization.yaml
+++ b/kubernetes/apps/oci/actions-runner-system/kustomization.yaml
@@ -6,5 +6,5 @@ components:
   - ../../../components/common
 namespace: actions-runner-system
 resources:
-  - gha-runner-scale-set/ks.yaml
-  - gha-runner-scale-set-controller/ks.yaml
+  - gha-runner-scale-set.yaml
+  - gha-runner-scale-set-controller.yaml
