--- a/kubernetes/apps/oci/security/kustomization.yaml
+++ b/kubernetes/apps/oci/security/kustomization.yaml
@@ -6,6 +6,6 @@ components:
   - ../../../components/common
 namespace: security
 resources:
-  - authentik/ks.yaml
-  - cert-manager/ks.yaml
-  - external-secrets/ks.yaml
+  - authentik.yaml
+  - cert-manager.yaml
+  - external-secrets.yaml
