--- a/kubernetes/apps/oci/storage/kustomization.yaml
+++ b/kubernetes/apps/oci/storage/kustomization.yaml
@@ -6,5 +6,5 @@ components:
   - ../../../components/common
 namespace: storage
 resources:
-  - democratic-csi/ks.yaml
-  - snapshot-controller/ks.yaml
+  - democratic-csi.yaml
+  - snapshot-controller.yaml
