--- a/kubernetes/apps/base/actions-runner-system/gha-runner-scale-set/app/helmrelease.yaml
+++ b/kubernetes/apps/base/actions-runner-system/gha-runner-scale-set/app/helmrelease.yaml
@@ -17,7 +17,7 @@ spec:
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: gha-runner-scale-set
+  name: gha-runner-scale-set-${REPO:-gitops}
 spec:
   chartRef:
     kind: OCIRepository
