--- a/kubernetes/apps/base/actions-runner-system/gha-runner-scale-set/app/values.yaml
+++ b/kubernetes/apps/base/actions-runner-system/gha-runner-scale-set/app/values.yaml
@@ -19,6 +19,9 @@ template:
   spec:
     containers:
       - command: ["/home/runner/run.sh"]
+        env:
+          - name: ACTIONS_RUNNER_REQUIRE_JOB_CONTAINER
+            value: "false"
         image: ghcr.io/actions/actions-runner:latest
         name: runner
     securityContext:
