--- a/kubernetes/apps/base/actions-runner-system/gha-runner-scale-set/app/values.yaml
+++ b/kubernetes/apps/base/actions-runner-system/gha-runner-scale-set/app/values.yaml
@@ -15,6 +15,7 @@ githubConfigUrl: https://github.com/iamryanmacdonald/${REPO:-gitops}
 githubConfigSecret: gha-runner-scale-set
 maxRunners: 2
 minRunners: 1
+runnerScaleSetName: self-hosted
 template:
   spec:
     containers:
