fix: action runner config map name dynamic

--- a/kubernetes/apps/base/actions-runner-system/gha-runner-scale-set/app/helmrelease.yaml
+++ b/kubernetes/apps/base/actions-runner-system/gha-runner-scale-set/app/helmrelease.yaml
@@ -35,4 +35,4 @@ spec:
       retries: 3
   valuesFrom:
     - kind: ConfigMap
-      name: gha-runner-scale-set-values
+      name: gha-runner-scale-set-values-${REPO:-gitops}
