--- a/kubernetes/apps/base/actions-runner-system/gha-runner-scale-set/app/kustomization.yaml
+++ b/kubernetes/apps/base/actions-runner-system/gha-runner-scale-set/app/kustomization.yaml
@@ -3,7 +3,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 configMapGenerator:
-  - name: gha-runner-scale-set-values
+  - name: gha-runner-scale-set-values-${REPO:-gitops}
     files:
       - values.yaml=./values.yaml
 configurations:
