fix: moved action runner values into HR file

--- a/kubernetes/apps/oci/actions-runner-system/gha-runner-scale-set.yaml
+++ b/kubernetes/apps/oci/actions-runner-system/gha-runner-scale-set.yaml
@@ -13,7 +13,7 @@ spec:
   postBuild:
     substitute:
       REPO: gitops
-      SCALE_SET_NAME: self-hosted-gitops
+      RUNNER_SCALE_SET_NAME: self-hosted-gitops
   prune: true
   retryInterval: 2m
   sourceRef:
