--- a/kubernetes/apps/base/actions-runner-system/gha-runner-scale-set/app/helmrelease.yaml
+++ b/kubernetes/apps/base/actions-runner-system/gha-runner-scale-set/app/helmrelease.yaml
@@ -33,32 +33,6 @@ spec:
     cleanupOnFail: true
     remediation:
       retries: 3
-  values:
-    containerMode:
-      kubernetesModeWorkVolumeClaim:
-        accessModes:
-          - ReadWriteOnce
-        resources:
-          requests:
-            storage: 10Gi
-        storageClassName: local-hostpath
-      type: kubernetes
-    controllerServiceAccount:
-      name: gha-runner-scale-set-controller
-      namespace: actions-runner-system
-    githubConfigUrl: https://github.com/iamryanmacdonald/${REPO:-gitops}
-    githubConfigSecret: gha-runner-scale-set
-    maxRunners: 2
-    minRunners: 1
-    runnerScaleSetName: ${RUNNER_SCALE_SET_NAME:-self-hosted}
-    template:
-      spec:
-        containers:
-          - command: ["/home/runner/run.sh"]
-            env:
-              - name: ACTIONS_RUNNER_REQUIRE_JOB_CONTAINER
-                value: "false"
-            image: ghcr.io/actions/actions-runner:latest
-            name: runner
-        securityContext:
-          fsGroup: 123
+  valuesFrom:
+    - kind: ConfigMap
+      name: gha-runner-scale-set-values
