--- a/kubernetes/apps/base/actions-runner-system/gha-runner-scale-set/app/kustomization.yaml
+++ b/kubernetes/apps/base/actions-runner-system/gha-runner-scale-set/app/kustomization.yaml
@@ -2,6 +2,12 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+configMapGenerator:
+  - name: gha-runner-scale-set-values
+    files:
+      - values.yaml=./values.yaml
+configurations:
+  - kustomizeconfig.yaml
 resources:
   - externalsecret.yaml
   - helmrelease.yaml
