--- a/kubernetes/apps/base/flux-system/headlamp/app/externalsecret.yaml
+++ b/kubernetes/apps/base/flux-system/headlamp/app/externalsecret.yaml
@@ -13,3 +13,9 @@ spec:
     name: bitwarden
   target:
     name: *name
+    template:
+      data:
+        HEADLAMP_CONFIG_OIDC_CLIENT_ID: '{{ .HEADLAMP_CLIENT_ID }}'
+        HEADLAMP_CONFIG_OIDC_CLIENT_SECRET: '{{ .HEADLAMP_CLIENT_SECRET }}'
+        HEADLAMP_CONFIG_OIDC_IDP_ISSUER_URL: '${CLUSTER_AUTH_URL}/application/o/headlamp/'
+        HEADLAMP_CONFIG_OIDC_SCOPES: "email,openid,profile"
