--- a/kubernetes/apps/base/flux-system/headlamp/app/values.yaml
+++ b/kubernetes/apps/base/flux-system/headlamp/app/values.yaml
@@ -16,6 +16,11 @@ initContainers:
       - mkdir -p /build/plugins && cp -r /plugins/* /build/plugins/ && chown -R 100:101 /build
     image: ghcr.io/headlamp-k8s/headlamp-plugin-flux:v0.4.0
     name: headlamp-plugins
+    securityContext:
+      privileged: false
+      runAsGroup: 0
+      runAsNonRoot: false
+      runAsUser: 0
     volumeMounts:
       - mountPath: /build/plugins
         name: headlamp-plugins
