fix: add CBR to kustomization

--- a/kubernetes/apps/base/flux-system/headlamp/app/kustomization.yaml
+++ b/kubernetes/apps/base/flux-system/headlamp/app/kustomization.yaml
@@ -9,6 +9,7 @@ configMapGenerator:
 configurations:
   - kustomizeconfig.yaml
 resources:
+  - clusterrolebinding.yaml
   - externalsecret.yaml
   - helmrelease.yaml
   - httproute.yaml
